# powder

./: .env.example  .gitignore  .landmark.yml  AGENTS.md  Cargo.toml  Dockerfile  README.md  SKILL.md  VISION.md  fly.toml  litestream.yml
.agents/skills/powder-qa/: SKILL.md
.agents/skills/powder-qa/evals/: powder-qa-eval.md
.canary/: integration.json
.github/workflows/: ci.yml  landmark-manual-tag.yml  landmark-release.yml  quickstart.yml  release.yml
backlog.d/: 001-claim-lifecycle-correctness.md  001-import-backlogd-markdown.md  002-ci-gate-and-license.md  002-implement-ready-query.md  003-add-claim-locks-and-release.md  003-answer-loop.md  004-real-identity-and-authority.md  004-ship-v0-mcp-tools.md  005-model-human-input-activity.md  005-private-ingress-conformance.md  006-create-github-remote-after-approval.md  007-migration-imports.md  008-bitterblossom-integration-events.md  009-api-key-lifecycle.md  010-no-fabricated-acceptance.md  011-delete-in-memory-mcp-fallback.md  012-delete-dead-shell-ports.md  013-sha256-api-key-hashing.md  014-list-and-filter-cards-across-http-cli-mcp.md  015-blockers-never-resolve-against-terminality.md  016-audit-card-source-path-leak.md  017-wire-comment-write-path.md  018-delete-dead-run-and-shell-scaffolding.md  019-http-request-logging.md  020-state-model-simplification-assignee-as-claim.md  021-adopt-lucide-kanban-as-the-powder-wordmark-icon.md  901-safe-partial-update-path.md  902-api-filed-cards-on-disk.md  powder-mission-critical-hardening.md
crates/powder-api/: Cargo.toml
crates/powder-api/src/: lib.rs  remote.rs
crates/powder-cli/: Cargo.toml  build.rs
crates/powder-cli/src/: lib.rs  main.rs
crates/powder-cli/tests/: multi_repo_import.rs
crates/powder-cli/tests/fixtures/multi_repo/repo-a/: 001-first-duplicate.md  001-first.md  002-second.md
crates/powder-cli/tests/fixtures/multi_repo/repo-b/: 001-first.md
crates/powder-core/: Cargo.toml
crates/powder-core/src/: backlog.rs  board.rs  card_fields.rs  lib.rs  model.rs  papercut.rs  queries.rs  ready_order.rs  repository.rs
crates/powder-core/tests/: criterion_review_operation_kind.rs
crates/powder-core/tests/fixtures/legacy-board-source/: 001-example.md
crates/powder-mcp/: Cargo.toml  build.rs
crates/powder-mcp/examples/: eval.rs  live_ab_eval.rs
crates/powder-mcp/src/: eval_harness.rs  lib.rs  live_eval.rs  main.rs  remote.rs
crates/powder-mcp/tests/: no_ephemeral_fallback.rs  tool_use_eval.rs  version.rs
crates/powder-server/: Cargo.toml  build.rs
crates/powder-server/src/: canary.rs  main.rs  tests.rs
crates/powder-server/static/: index.html
crates/powder-server/static/assets/: aesthetic.css  powder-board.css  powder-board.js
crates/powder-server/tests/: deploy_contract.rs  doctor_contract.rs  install_workstation_contract.rs  production_contract.rs  socket_smoke.rs  sse_live.rs
crates/powder-server/tests/support/: mod.rs
crates/powder-shell/: Cargo.toml
crates/powder-shell/src/: github.rs  lib.rs  markdown.rs
crates/powder-shell/tests/fixtures/multiline_criteria/: 026.md  033.md  037.md  041.md  058.md  059.md
crates/powder-store/: Cargo.toml
crates/powder-store/src/: answer_loop.rs  events.rs  identity.rs  lib.rs  relations.rs  repositories.rs  schema.rs  secrets.rs  status_model_020.rs  telemetry.rs  tests.rs
crates/powder-store/tests/: identity_v17_migration.rs  principal_attribution.rs  run_scoped_criteria.rs  status_model_020_rehearsal.rs  status_v17_repair.rs  status_vocabulary_migration.rs
crates/powder-store/tests/fixtures/: card_event_v1.json  status_model_020_snapshot.sql  status_v17_repair_snapshot.sql  status_vocabulary_snapshot.sql
docs/: autonomy-class.md  card-events-v1.md  lease-race-transcript.txt  litestream-restore-drill.md  mutation-operations-v1.md  operations.md  production-deploy.md  remote-agent-reachability.md  run-bound-completion-v1.md  run-bound-work-logs-v1.md  run-scoped-criterion-review-v1.md  self-hosting.md  status-vocabulary.md
law/: board.law.spec.ts  package-lock.json  package.json  playwright.config.ts
law/scripts/: start-empty-fixture-server.sh  start-fixture-server.sh
scripts/: check-aesthetic-currency.sh  demo-webhook-subscriber.py  install-workstation.sh  leak-gate.sh  lease-race-demo.sh
site/: DESIGN.md  aesthetic.css  changelog.html  features.html  get-started.html  index.html  marketing.css
test/: install-workstation.sh  powder-remote-doctor.sh
ui/: TOKENS.md  build.mjs  package-lock.json  package.json  vite.config.mjs
ui/src/: index.html  powder-board.css  powder-board.js  tailwind.css  tokens.css
