[package]
name = "powder-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
powder-core = { path = "../powder-core" }
powder-shell = { path = "../powder-shell" }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
