[package]
name = "powder-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "powder-mcp"
path = "src/main.rs"

[dependencies]
powder-core = { path = "../powder-core" }
powder-shell = { path = "../powder-shell" }
serde_json = "1"
