[package]
name = "powder-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "powder-mcp"
path = "src/main.rs"

[dependencies]
powder-api = { path = "../powder-api" }
powder-core = { path = "../powder-core" }
powder-shell = { path = "../powder-shell" }
powder-store = { path = "../powder-store" }
serde_json = "1"
# Only exercised by the env-gated live-model harness (src/live_eval.rs) to
# call the OpenRouter chat-completions API; every other build path never
# opens a socket. Already a workspace dependency of powder-api.
ureq = { version = "2", features = ["json"] }
