[package]
name = "powder-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "powder-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
powder-core = { path = "../powder-core" }
powder-shell = { path = "../powder-shell" }
powder-store = { path = "../powder-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
