[package]
name = "powder-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "powder-server"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
axum = "0.8"
hex = "0.4"
hmac = "0.12"
powder-api = { path = "../powder-api" }
powder-core = { path = "../powder-core" }
powder-shell = { path = "../powder-shell" }
powder-store = { path = "../powder-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
# Test-only: the cross-face `list_ready` ordering parity test drives the
# CLI's and MCP's own in-process entry points against an identical fixture
# alongside this crate's own HTTP handlers, proving all three faces expose
# the same `Store::list_ready_page` order rather than re-sorting it
# independently. No production code in this crate depends on either face.
powder-cli = { path = "../powder-cli" }
powder-mcp = { path = "../powder-mcp" }
